PDFBOX-5061: remove jaxb dependency; closes #101
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/trunk@1884944 13f79535-47bb-0310-9956-ffa450edef68