@@ -141,7 +141,8 @@
                 <jdk>[9,10]</jdk>
             </activation>
             <properties>
-                <addmod>--add-modules java.xml.bind</addmod>
+                <!-- needs to exist even if empty due to problems with jacoco-maven-plugin -->
+                <addmod></addmod>
             </properties>
         </profile>
         <!-- need to specify release version so that if PDFBox is built with
@@ -163,8 +164,6 @@
             </build>
         </profile>
         <profile>
-            <!-- from jdk11 onwards java.xml.bind is no longer part of the jdk -->
-            <!-- must be set to "test" or "provided" in subprojects --> 
             <id>jdk11</id>
             <activation>
                 <jdk>[11,)</jdk>
@@ -173,15 +172,6 @@
                 <!-- needs to exist even if empty due to problems with jacoco-maven-plugin -->
                 <addmod></addmod>
             </properties>
-            <dependencyManagement>
-                <dependencies>
-                    <dependency>
-                        <groupId>javax.xml.bind</groupId>
-                        <artifactId>jaxb-api</artifactId>
-                        <version>2.3.1</version>
-                    </dependency>
-                </dependencies>
-            </dependencyManagement>
         </profile>
         <profile>
             <id>pedantic</id>
